# Fork_OpenAIglasses_for_Navigation

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  REPO_INTRODUCTION.md  app_main.py  asr_core.py  audio_player.py  audio_stream.py  auth.py  config.py  docker-compose.yml  download_models.py  esp32_simulator.py  generate_voice.py  idea.md  local_device.py  model_client.py  model_server.py  models.py  navigation_master.py  obstacle_detector_client.py  omni_client.py  position_reporter.py  prepare_voice_assets.py  pyproject.toml  qwen_extractor.py  requirements.txt  speaker_verifier.py  start_multi_device.py  test_yoloe_compare.py  trafficlight_detection.py  workflow_blindpath.py  workflow_crossstreet.py  yoloe_backend.py  yolomedia.py
.claude/commands/: app-check.md  arch.md  check.md  handover.md  pre-commit.md  update-md.md  web-test.md
Android/: README.md  pubspec.yaml
Android/android/app/: build.gradle.kts
Android/assets/: voice_map.json
Android/lib/: app.dart  main.dart
Android/lib/core/: constants.dart  theme.dart
Android/lib/providers/: app_provider.dart  auth_provider.dart
Android/test/: widget_test.dart
Android/web/: index.html  manifest.json
MD/: APP使用說明.md  YOLO_obstacle_training_v1.md  idea.md  plan_model_on_device.md  plan_vertex_ai_integration.md  展示網站使用說明.md  系統介紹.md  語音指令.md  部署安裝.md
Website/: .gitignore  CLAUDE.md  docker-compose.yml
Website/backend/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
Website/frontend/: .gitignore  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
Website/nginx/: nginx.conf
compile/: 自己用  輩分節
docs/: plan_model_management.md
ineedyou/full_stack_web/: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  renew.md
ineedyou/ocr_test/: test_ocr.py
static/: main.js
templates/: index.html  speaker.html
voice/: map.zh-CN.json
voice_missing_log/: 2026-04-12.txt
(+153 files in other folders)
